--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/macro-picker.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/macro-picker.html
@@ -1,18 +1,24 @@
 ﻿<div class="umb-property-editor umb-contentpicker" ng-controller="Our.Umbraco.Contentment.DataEditors.MacroPicker.Controller as vm">
-    <div ui-sortable="vm.sortableOptions" ng-model="model.value">
-        <umb-node-preview ng-repeat="item in model.value"
-                          icon="vm.icon"
-                          name="item.name"
-                          published="vm.published"
-                          description="item.alias"
-                          sortable="vm.sortable"
-                          allow-remove="vm.allowRemove"
-                          allow-edit="vm.allowEdit"
-                          on-remove="vm.remove($index)"
-                          on-edit="vm.edit($index, item)">
-        </umb-node-preview>
+    <div class="umb-rte row-fluid span8" ng-if="vm.loading">
+        <umb-load-indicator></umb-load-indicator>
     </div>
-    <a class="umb-node-preview-add" href="" ng-click="vm.add($event)" ng-if="vm.allowAdd" prevent-default>
-        <localize key="general_add">Add</localize>
-    </a>
+
+    <div ng-if="!vm.loading">
+        <div ui-sortable="vm.sortableOptions" ng-model="model.value">
+            <umb-node-preview ng-repeat="item in model.value"
+                              icon="vm.icon"
+                              name="item.name"
+                              published="vm.published"
+                              description="item.alias"
+                              sortable="vm.sortable"
+                              allow-remove="vm.allowRemove"
+                              allow-edit="vm.allowEdit"
+                              on-remove="vm.remove($index)"
+                              on-edit="vm.edit($index, item)">
+            </umb-node-preview>
+        </div>
+        <a class="umb-node-preview-add" href="" ng-click="vm.add($event)" ng-if="vm.allowAdd" prevent-default>
+            <localize key="general_add">Add</localize>
+        </a>
+    </div>
 </div>
