--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/data-table.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/data-table.html
@@ -1,5 +1,5 @@
 ﻿<div class="umb-property-editor" ng-controller="Our.Umbraco.Contentment.DataEditors.DataTable.Controller as vm">
-    <table class="table" ng-show="vm.items.length > 0" ng-style="vm.style">
+    <table class="table" ng-show="vm.items.length > 0" ng-style="vm.styleTable">
         <thead>
             <tr>
                 <th ng-if="vm.sortable"></th>
@@ -28,7 +28,7 @@
             </tr>
         </tbody>
     </table>
-    <a class="umb-node-preview-add" href="" ng-click="vm.add($event)" ng-if="vm.allowAdd" prevent-default>
+    <a class="umb-node-preview-add" href="" ng-click="vm.add($event)" ng-if="vm.allowAdd" ng-style="vm.styleButton" prevent-default>
         <localize key="general_add">Add</localize>
     </a>
 </div>
