--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/dropdown.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/dropdown.html
@@ -1,4 +1,9 @@
-﻿<div class="umb-property-editor" ng-controller="Our.Umbraco.Contentment.DataEditors.Dropdown.Controller as vm">
+﻿<!-- Copyright © 2019 Lee Kelleher, Umbrella Inc and other contributors.
+   - This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this
+   - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
+
+<div class="umb-property-editor" ng-controller="Our.Umbraco.Contentment.DataEditors.Dropdown.Controller as vm">
     <select class=" umb-dropdown"
             ng-model="model.value"
             ng-options="item.value as item.label disable when item.disabled for item in vm.items">
