--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/umb-entity-picker.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/umb-entity-picker.html
@@ -1,4 +1,9 @@
-﻿<div class="umb-property-editor umb-contentpicker" ng-controller="Our.Umbraco.Contentment.DataEditors.EntityPicker.Controller as vm">
+﻿<!-- Copyright © 2019 Lee Kelleher, Umbrella Inc and other contributors.
+   - This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this
+   - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
+
+<div class="umb-property-editor umb-contentpicker" ng-controller="Our.Umbraco.Contentment.DataEditors.UmbracoEntityPicker.Controller as vm">
     <div class="umb-rte row-fluid span8" ng-if="vm.loading">
         <umb-load-indicator></umb-load-indicator>
     </div>
