--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/dropdown-list.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/dropdown-list.html
@@ -3,18 +3,11 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-property-editor" ng-controller="Our.Umbraco.Contentment.DataEditors.DataList.Controller as vm">
-
+<div class="umb-property-editor" ng-controller="Our.Umbraco.Contentment.DataEditors.DropdownList.Controller as vm">
     <select id="{{model.alias}}"
             class="umb-dropdown"
             ng-model="model.value"
-            ng-options="item.value as item.label disable when item.disabled for item in model.config.items">
-        <!--<option></option>-->
+            ng-options="item.value as item.label disable when item.disabled for item in vm.items">
+        <option ng-if="vm.allowEmpty"></option>
     </select>
-
-    <details>
-        <summary>Debug</summary>
-        <pre><xmp>{{model | json}}</xmp></pre>
-    </details>
-
 </div>
