--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/_debug.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/_debug.html
@@ -7,7 +7,7 @@
 
     <details open>
         <summary>Debug</summary>
-        <pre><xmp>{{model | json}}</xmp></pre>
+        <pre>{{model | json}}</pre>
     </details>
 
 </div>
