--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/configuration-editor.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/configuration-editor.html
@@ -21,8 +21,8 @@
         <localize key="general_add">Add</localize>
     </a>
 
-    <details style="margin-top:20px;" class="span8" ng-if="vm.debug">
+    <details style="margin-top: 20px;" class="span8" ng-if="vm.debug">
         <summary>Debug</summary>
-        <pre><xml>{{model | json}}</xml></pre>
+        <pre>{{model | json}}</pre>
     </details>
 </div>
