[WIP] Further work on Data Editors
Added Item Picker and started Icon Picker.
Renamed the "label" values to "name", for better UI consistency.

--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/configuration-editor.overlay.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/configuration-editor.overlay.html
@@ -19,7 +19,7 @@
 
                 <umb-box ng-if="vm.items.length > 0">
                     <umb-box-content class="block-form">
-                        <div class="form-search" ng-if="vm.enableSearch">
+                        <div class="form-search" ng-if="vm.enableSearch" style="margin-bottom: 15px;">
                             <i class="icon-search"></i>
                             <input type="text"
                                    style="width: 100%"
