--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/cascading-dropdown-list.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/cascading-dropdown-list.html
@@ -13,7 +13,7 @@
         <span ng-repeat="dropdown in vm.dropdowns">
             <select class="umb-dropdown"
                     ng-model="model.value[$index]"
-                    ng-options="item.value as item.label disable when item.disabled for item in dropdown.options"
+                    ng-options="item.value as item.name disable when item.disabled for item in dropdown.options"
                     ng-required="true"
                     ng-change="vm.change($index)"></select>
         </span>
