--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/radio-button-list.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/radio-button-list.html
@@ -8,7 +8,7 @@
         <li ng-repeat="item in vm.items">
             <label>
                 <input type="radio" ng-model="model.value" value="{{item.value}}" />
-                <span ng-bind-html="item.label | safe_html"></span>
+                <span ng-bind-html="item.name | safe_html"></span>
             </label>
         </li>
     </ul>
