--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/icon-picker.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/icon-picker.html
@@ -4,7 +4,7 @@
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 <div class="umb-property-editor" ng-controller="Our.Umbraco.Contentment.DataEditors.IconPicker.Controller as vm">
-    <a class="umb-panel-header-icon -placeholder" title="{{model.value}}" href="" ng-click="vm.pick()">
+    <a href="" class="umb-panel-header-icon -placeholder" ng-attr-title="{{model.value}}" ng-click="vm.pick()">
         <i class="icon {{model.value}}"></i>
     </a>
 </div>
