Removed UmbracoEntityPicker editor
Now I have an ItemPicker editor, I've created an UmbracoEntity datasource,
which has effectively replaced the UmbracoEntityPicker editor.

Less code, less docs, less maintenance!

--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/_debug.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/_debug.html
@@ -5,6 +5,7 @@
 
 <div class="umb-property-editor">
 
+    <!-- // TODO: Jonathan wants me to make the "Debug" panel to be editable, so dev's can copy/paste JSON between editors -->
     <details open>
         <summary>Debug</summary>
         <pre>{{model | json}}</pre>
