--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/item-picker.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/item-picker.html
@@ -9,7 +9,7 @@
                           icon="item.icon || vm.icon"
                           name="item.name"
                           published="vm.published"
-                          description="item.description"
+                          description="item.description || item.value"
                           sortable="vm.sortable"
                           allow-remove="vm.allowRemove"
                           allow-edit="vm.allowEdit"
