[WIP] Further dev on Data Editors

--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/_empty.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/_empty.html
@@ -4,11 +4,5 @@
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 <div class="umb-property-editor">
-
-    <!-- // TODO: Jonathan wants me to make the "Debug" panel to be editable, so dev's can copy/paste JSON between editors -->
-    <details>
-        <summary>Debug</summary>
-        <pre>{{model | json}}</pre>
-    </details>
-
+    <i class="icon icon-smiley color-pink large"></i>
 </div>
