--- a/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/checkbox-list.html
+++ b/src/Our.Umbraco.Contentment/Web/UI/App_Plugins/Contentment/data-editors/checkbox-list.html
@@ -4,6 +4,14 @@
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 <div class="umb-property-editor umb-checkboxlist" ng-controller="Our.Umbraco.Contentment.DataEditors.CheckboxList.Controller as vm">
+    <ul class="unstyled checkbox no-indent" ng-if="vm.toggleAll">
+        <li>
+            <label>
+                <input type="checkbox" ng-change="vm.toggle()" ng-model="vm.toggleChecked" />
+                <span>{{vm.toggleChecked ? "Uncheck all" : "Check all"}}</span>
+            </label>
+        </li>
+    </ul>
     <ul class="unstyled checkbox no-indent" ng-class="vm.layout">
         <li ng-repeat="item in vm.items">
             <label>
