--- a/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
@@ -81,6 +81,7 @@
                 <umb-button ng-if="vm.save"
                             type="button"
                             button-style="success"
+                            shortcut="ctrl+s"
                             label-key="bulk_done"
                             action="vm.save(vm.editor)">
                 </umb-button>
