--- a/src/Our.Umbraco.Contentment/DataEditors/CascadingDropdownList/cascading-dropdown-list.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/CascadingDropdownList/cascading-dropdown-list.html
@@ -5,13 +5,14 @@
 
 <div class="umb-property-editor" ng-controller="Our.Umbraco.Contentment.DataEditors.CascadingDropdownList.Controller as vm">
 
-    <div class="umb-rte row-fluid span8" ng-if="vm.loading">
+    <div class="umb-rte row-fluid span8" ng-if="vm.loading === true">
         <umb-load-indicator></umb-load-indicator>
     </div>
 
-    <div ng-show="!vm.loading">
+    <div ng-show="vm.loading === false">
         <span ng-repeat="dropdown in vm.dropdowns">
             <select class="umb-dropdown"
+                    style="margin-bottom: 10px;"
                     ng-model="model.value[$index]"
                     ng-options="item.value as item.name disable when item.disabled for item in dropdown.options"
                     ng-required="true"
