Added "Developer Mode" directive
This should make @Joniff happy! :-)

--- a/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
@@ -20,4 +20,5 @@
     <a class="umb-node-preview-add" href="" ng-click="vm.add($event)" ng-if="vm.allowAdd" prevent-default>
         <localize key="general_add">Add</localize>
     </a>
+    <contentment-dev-mode ng-model="model.value" ng-if="vm.enableDevMode" />
 </div>
