--- a/src/Our.Umbraco.Contentment/DataEditors/ItemPicker/item-picker.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/ItemPicker/item-picker.html
@@ -19,4 +19,5 @@
     <a class="umb-node-preview-add" href="" ng-click="vm.add($event)" ng-if="vm.allowAdd" prevent-default>
         <localize key="general_add">Add</localize>
     </a>
+    <contentment-dev-mode ng-model="model.value" on-update="vm.bind()" ng-if="vm.enableDevMode" />
 </div>
