Editor markup improvements

--- a/src/Our.Umbraco.Contentment/DataEditors/CascadingDropdownList/cascading-dropdown-list.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/CascadingDropdownList/cascading-dropdown-list.html
@@ -3,7 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-property-editor" ng-controller="Our.Umbraco.Contentment.DataEditors.CascadingDropdownList.Controller as vm">
+<div ng-controller="Our.Umbraco.Contentment.DataEditors.CascadingDropdownList.Controller as vm">
 
     <div class="umb-rte row-fluid span8" ng-if="vm.loading === true">
         <umb-load-indicator></umb-load-indicator>
