--- a/src/Our.Umbraco.Contentment/DataEditors/DataTable/data-table.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/DataTable/data-table.html
@@ -3,7 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-property-editor" ng-controller="Our.Umbraco.Contentment.DataEditors.DataTable.Controller as vm">
+<div ng-controller="Our.Umbraco.Contentment.DataEditors.DataTable.Controller as vm">
     <table class="table" ng-show="vm.items.length > 0" ng-style="vm.styleTable">
         <thead>
             <tr>
