--- a/src/Our.Umbraco.Contentment/DataEditors/DropdownList/dropdown-list.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/DropdownList/dropdown-list.html
@@ -3,7 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-property-editor" ng-controller="Our.Umbraco.Contentment.DataEditors.DropdownList.Controller as vm">
+<div ng-controller="Our.Umbraco.Contentment.DataEditors.DropdownList.Controller as vm">
     <select id="{{model.alias}}"
             class="umb-dropdown"
             ng-model="model.value"
