--- a/src/Our.Umbraco.Contentment/DataEditors/_/_dev-mode.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/_/_dev-mode.html
@@ -3,8 +3,8 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="color-grey" style="background-color: #f6f4f4;padding: 5px 0;max-width:66.6%;display: flex;margin-top: 10px;">
-    <i class="icon icon-brackets small" style="margin:0 5px;vertical-align: middle;"></i>
+<div class="color-grey" style="background-color: #f6f4f4;padding: 5px 0;display: flex;margin-top: 10px;">
+    <i class="icon icon-alert small" style="margin:0 5px;vertical-align: middle;"></i>
     <small>
         <strong>Developer mode:</strong>
         <a href="" class="color-grey" ng-click="open()" prevent-default>Click here to edit the raw JSON value.</a>
