--- a/src/Our.Umbraco.Contentment/DataEditors/Checkbox/checkbox.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/Checkbox/checkbox.html
@@ -3,7 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-property-editor umb-boolean" ng-controller="Our.Umbraco.Contentment.DataEditors.Checkbox.Controller as vm">
+<div class="umb-boolean" ng-controller="Our.Umbraco.Contentment.DataEditors.Checkbox.Controller as vm">
     <input type="checkbox" id="{{vm.alias}}" ng-model="model.value" ng-true-value="{{vm.true}}" ng-false-value="{{vm.false}}" />
     <label for="{{vm.alias}}" title="{{vm.label}}" ng-if="vm.showInline" style="margin: 1px auto 0 3px; width: 90%;">
         <strong ng-bind-html="vm.label"></strong>
