--- a/src/Our.Umbraco.Contentment/DataEditors/CodeEditor/code-editor.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/CodeEditor/code-editor.html
@@ -3,6 +3,6 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-property-editor" ng-controller="Our.Umbraco.Contentment.DataEditors.CodeEditor.Controller as vm">
+<div ng-controller="Our.Umbraco.Contentment.DataEditors.CodeEditor.Controller as vm">
     <div umb-ace-editor="vm.options" model="model.value" ng-readonly="vm.readonly"></div>
 </div>
