--- a/src/Our.Umbraco.Contentment/DataEditors/IconPicker/icon-picker.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/IconPicker/icon-picker.html
@@ -3,7 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-property-editor" ng-controller="Our.Umbraco.Contentment.DataEditors.IconPicker.Controller as vm">
+<div ng-controller="Our.Umbraco.Contentment.DataEditors.IconPicker.Controller as vm">
     <a href="" class="umb-panel-header-icon -placeholder" ng-attr-title="{{model.value}}" ng-click="vm.pick()">
         <i class="icon {{model.value}}"></i>
     </a>
