--- a/src/Our.Umbraco.Contentment/DataEditors/Notes/notes.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/Notes/notes.html
@@ -3,6 +3,6 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-property-editor umb-readonlyvalue">
+<div class="umb-readonlyvalue">
     <div ng-bind-html="model.config.notes | safe_html"></div>
 </div>
