--- a/src/Our.Umbraco.Contentment/DataEditors/RadioButtonList/radio-button-list.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/RadioButtonList/radio-button-list.html
@@ -3,12 +3,13 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-property-editor umb-radiobuttons" ng-controller="Our.Umbraco.Contentment.DataEditors.RadioButtonList.Controller as vm">
+<div class="contentment umb-radiobuttons" ng-controller="Our.Umbraco.Contentment.DataEditors.RadioButtonList.Controller as vm">
     <ul class="unstyled radio no-indent" ng-class="vm.layout">
         <li ng-repeat="item in vm.items">
             <label>
                 <input type="radio" ng-model="model.value" value="{{item.value}}" />
                 <span ng-bind-html="item.name | safe_html"></span>
+                <small ng-if="item.description &amp;&amp; vm.layout === ''" ng-bind-html="item.description | safe_html"></small>
             </label>
         </li>
     </ul>
