--- a/src/Our.Umbraco.Contentment/DataEditors/ItemPicker/item-picker.overlay.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/ItemPicker/item-picker.overlay.html
@@ -18,6 +18,8 @@
             <umb-box>
                 <umb-box-content>
 
+                    <!-- TODO: [LK:2019-06-30] Display message if there are no items available. -->
+
                     <div class="form-search" ng-if="vm.enableFilter" style="margin-bottom: 15px;">
                         <i class="icon-search"></i>
                         <input type="text"
