--- a/src/Our.Umbraco.Contentment/DataEditors/ItemPicker/item-picker.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/ItemPicker/item-picker.html
@@ -16,7 +16,7 @@
                           on-remove="vm.remove($index)">
         </umb-node-preview>
     </div>
-    <a class="umb-node-preview-add" href="" ng-click="vm.add($event)" ng-if="vm.allowAdd" prevent-default>
+    <a class="umb-node-preview-add" href="" ng-click="vm.add()" ng-if="vm.allowAdd" prevent-default>
         <localize key="general_add">Add</localize>
     </a>
     <contentment-dev-mode ng-model="model.value" on-update="vm.bind()" ng-if="vm.enableDevMode" />
