--- a/src/Our.Umbraco.Contentment/DataEditors/CheckboxList/checkbox-list.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/CheckboxList/checkbox-list.html
@@ -3,7 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-checkboxlist" ng-controller="Our.Umbraco.Contentment.DataEditors.CheckboxList.Controller as vm">
+<div class="contentment umb-checkboxlist" ng-controller="Our.Umbraco.Contentment.DataEditors.CheckboxList.Controller as vm">
     <ul class="unstyled checkbox no-indent" ng-class="vm.layout" ng-if="vm.toggleAll">
         <li>
             <label>
@@ -18,6 +18,7 @@
             <label>
                 <input type="checkbox" ng-change="vm.changed(item)" ng-model="item.checked" value="{{item.value}}" />
                 <span ng-bind-html="item.name | safe_html"></span>
+                <small ng-if="item.description &amp;&amp; vm.layout === ''" ng-bind-html="item.description | safe_html"></small>
             </label>
         </li>
     </ul>
