--- a/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
@@ -44,7 +44,8 @@
                 </umb-box>
 
                 <umb-empty-state ng-if="vm.items.length == 0" position="center">
-                    There are no items available to insert.
+                    <div><lee-was-here /></div>
+                    <p>There are no items available to insert.</p>
                 </umb-empty-state>
 
             </div>
@@ -52,7 +53,8 @@
             <div ng-if="vm.mode == 'edit'">
 
                 <umb-empty-state ng-if="vm.editor === undefined" position="center">
-                    Unable to find the editor for this value.
+                    <div><lee-was-here /></div>
+                    <p>Unable to find the editor for this value.</p>
                 </umb-empty-state>
 
                 <umb-box ng-if="vm.editor.fields.length > 0">
@@ -66,7 +68,8 @@
                 </umb-box>
 
                 <umb-empty-state ng-if="vm.editor.fields.length == 0" position="center">
-                    There are no parameters for this item.
+                    <div><lee-was-here /></div>
+                    <p>There are no parameters for this item.</p>
                 </umb-empty-state>
 
             </div>
