--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-list.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-list.html
@@ -3,7 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="contentment umb-contentpicker" ng-controller="Umbraco.Community.Contentment.DataEditors.Element.Controller as vm">
+<div class="umb-contentpicker" ng-controller="Umbraco.Community.Contentment.DataEditors.ContentBlocks.Controller as vm">
     <div ui-sortable="vm.sortableOptions" ng-model="model.value">
         <umb-node-preview ng-repeat="item in model.value"
                           icon="item.icon"
@@ -18,6 +18,6 @@
         </umb-node-preview>
     </div>
     <a class="umb-node-preview-add" href="" ng-click="vm.add()" ng-if="vm.allowAdd" prevent-default>
-        <localize key="general_add">Add</localize>
+        <localize key="grid_addElement">Add content</localize>
     </a>
 </div>
