--- a/src/Our.Umbraco.Contentment/DataEditors/ItemPicker/item-picker.overlay.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/ItemPicker/item-picker.overlay.html
@@ -1,7 +1,12 @@
 ﻿<!-- Copyright © 2013-present Umbraco.
    - This Source Code has been take from Umbraco CMS.
    - https://github.com/umbraco/Umbraco-CMS/blob/release-8.0.2/src/Umbraco.Web.UI.Client/src/views/common/infiniteeditors/itempicker/itempicker.html
-   - Modified under the permissions of the MIT License. -->
+   - Modified under the permissions of the MIT License.
+   - Modifications are licensed under the Mozilla Public License.
+   - Copyright © 2019 Lee Kelleher, Umbrella Inc and other contributors.
+   - This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this
+   - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 <div class="contentment" ng-controller="Our.Umbraco.Contentment.Overlays.ItemPicker.Controller as vm">
 
