--- a/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
@@ -44,7 +44,7 @@
                 </umb-box>
 
                 <umb-empty-state ng-if="vm.items.length == 0" position="center">
-                    <p>There are no items available to insert.</p>
+                    <p>There are no items available to add.</p>
                 </umb-empty-state>
 
             </div>
