--- a/src/Our.Umbraco.Contentment/DataEditors/ItemPicker/item-picker.overlay.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/ItemPicker/item-picker.overlay.html
@@ -40,7 +40,7 @@
                             ng-click="vm.select(item)"
                             class="-three-in-row">
                             <a class="umb-card-grid-item" href="" title="{{item.name}}">
-                                <i class="{{item.icon}}"></i>
+                                <i class="icon large" ng-class="item.selected ? 'icon-check color-green' : item.icon"></i>
                                 {{item.name}}
                             </a>
                         </li>
@@ -49,9 +49,10 @@
                     <ul class="umb-actions umb-actions-child" ng-if="vm.listType === 'list'">
                         <li class="umb-action" ng-repeat="item in vm.items | orderBy:vm.orderBy | filter:vm.searchTerm">
                             <a class="umb-action-link" ng-click="vm.select(item)">
+                                <umb-checkmark ng-if="vm.enableMultiple" checked="item.selected" size="m"></umb-checkmark>
                                 <i class="large icon {{item.icon}}"></i>
                                 <span class="menu-label">
-                                    {{item.name}}
+                                    <span>{{item.name}}</span>
                                     <small>{{item.description}}</small>
                                 </span>
                             </a>
@@ -74,6 +75,13 @@
                             label-key="general_close"
                             shortcut="esc"
                             action="vm.close()">
+                </umb-button>
+                <umb-button ng-if="vm.enableMultiple"
+                            type="button"
+                            button-style="success"
+                            shortcut="ctrl+s"
+                            label-key="buttons_select"
+                            action="vm.submit()">
                 </umb-button>
             </umb-editor-footer-content-right>
         </umb-editor-footer>
