--- a/src/Our.Umbraco.Contentment/DataEditors/Toggles/toggles.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/Toggles/toggles.html
@@ -3,6 +3,6 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div ng-controller="Our.Umbraco.Contentment.DataEditors.ToggleGroup.Controller as vm">
+<div ng-controller="Our.Umbraco.Contentment.DataEditors.Toggles.Controller as vm">
     <umb-toggle-group items="vm.items" on-click="vm.changed(item)"></umb-toggle-group>
 </div>
