--- a/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
@@ -9,7 +9,7 @@
                           icon="item.icon"
                           name="item.name"
                           published="vm.published"
-                          description=""
+                          description="item.description"
                           sortable="vm.sortable"
                           allow-remove="vm.allowRemove"
                           allow-edit="vm.allowEdit"
