--- a/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
@@ -34,7 +34,7 @@
                                 <a class="umb-action-link" ng-click="vm.select(item)">
                                     <i class="large icon {{item.icon}}"></i>
                                     <span class="menu-label">
-                                        {{item.name}}
+                                        <span>{{item.name}}</span>
                                         <small>{{item.description}}</small>
                                     </span>
                                 </a>
