Fixed "Cards" so that it works with multiple selections

--- a/src/Our.Umbraco.Contentment/DataEditors/Cards/cards.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/Cards/cards.html
@@ -8,7 +8,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-grid-selector" ng-controller="Our.Umbraco.Contentment.DataEditors.Cards.Controller as vm">
+<div class="contentment umb-grid-selector" ng-controller="Our.Umbraco.Contentment.DataEditors.Cards.Controller as vm">
     <div class="umb-grid-selector__items" ui-sortable="vm.sortableOptions" ng-model="vm.items">
         <div class="umb-grid-selector__item -sortable" ng-repeat="item in vm.items">
             <div class="umb-grid-selector__item-content">
