--- a/src/Our.Umbraco.Contentment/DataEditors/Checkbox/checkbox.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/Checkbox/checkbox.html
@@ -3,10 +3,17 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-boolean" ng-controller="Our.Umbraco.Contentment.DataEditors.Checkbox.Controller as vm">
-    <input type="checkbox" id="{{vm.alias}}" ng-model="model.value" ng-true-value="{{vm.true}}" ng-false-value="{{vm.false}}" />
-    <label for="{{vm.alias}}" title="{{vm.label}}" ng-if="vm.showInline" style="margin: 1px auto 0 3px; width: 90%;">
-        <strong ng-bind-html="vm.label"></strong>
-        <small ng-bind-html="vm.description"></small>
+<div class="contentment umb-boolean" ng-controller="Our.Umbraco.Contentment.DataEditors.Checkbox.Controller as vm">
+    <label class="checkbox umb-form-check umb-form-check--checkbox">
+        <input type="checkbox" id="{{vm.alias}}" class="umb-form-check__input" ng-model="model.value" ng-true-value="{{vm.true}}" ng-false-value="{{vm.false}}" />
+        <span class="umb-form-check__state" aria-hidden="true">
+            <span class="umb-form-check__check">
+                <i class="umb-form-check__icon icon-check"></i>
+            </span>
+        </span>
+        <span class="umb-form-check__text" ng-if="vm.showInline">
+            <strong ng-bind-html="vm.label"></strong>
+            <small ng-bind-html="vm.description"></small>
+        </span>
     </label>
 </div>
