--- a/src/Our.Umbraco.Contentment/DataEditors/CheckboxList/checkbox-list.html
+++ b/src/Our.Umbraco.Contentment/DataEditors/CheckboxList/checkbox-list.html
@@ -18,7 +18,7 @@
                         <i class="umb-form-check__icon icon-check"></i>
                     </span>
                 </span>
-                <span class="umb-form-check__text">{{vm.toggleChecked ? "Uncheck all" : "Check all"}}</span>
+                <span class="umb-form-check__text" ng-bind="vm.toggleChecked ? 'Uncheck all' : 'Check all'"></span>
             </label>
         </li>
     </ul>
